# inverseKinematics

./: CMakeLists.txt  inverseKinematics.cpp  inverseKinematics.h
Documentation/: .gitignore  Bibliography.bib  IK.tex
Documentation/tex/: constraints.tex  jacobian.tex  problem.tex  twistMap.tex
include/: InverseKinematics.h  InverseKinematicsIPOPT.h  InverseKinematicsV2IPOPT.h
src/: InverseKinematics.cpp  InverseKinematicsIPOPT.cpp  InverseKinematicsV2IPOPT.cpp
tests/: CMakeLists.txt  testIK.cpp  testSuit.cpp
tests/data/: URDFdir.h.in
